--- a/src/components/clock/style.css
+++ b/src/components/clock/style.css
@@ -1,9 +1,9 @@
 #clock{
-    font-size: 3em;
+    font-size: 32px;
     border-radius: 4px;
     border: 1px solid white;
     background-color: white;
-    color: pink;
+    color: rgb(255, 127, 127);
     text-align: center;
     width: 200px;
     margin-bottom: 1px;
