--- a/src/components/message/style.css
+++ b/src/components/message/style.css
@@ -15,6 +15,11 @@
     color: rgb(255, 127, 127);
 }
 
+#messageContainer > h2{
+    width:300px;
+    text-align: center;
+}
+
 #messageContainer > button{
     color:rgb(255, 127, 127);
     background-color: white;
