--- a/src/components/hud/style.css
+++ b/src/components/hud/style.css
@@ -9,3 +9,28 @@
     justify-content: space-evenly;
     padding: 3px;
 }
+
+#taskDiv{
+    border: 1px solid rgb(255, 127, 127);
+    border-radius: 4px;
+    background-color: rgba(255, 255, 255, 0.87);
+    display: flex;
+    width: 150px;
+    height: auto;
+    align-items: center;
+    justify-content: space-around;
+    padding: 1px;
+    font-size: 15px;
+}
+
+#taskDiv p{
+    margin: 0px 1px;
+    color: rgb(255, 127, 127);
+}
+
+#taskBar{
+    width: 100px;
+    margin-left: 2px;
+    margin-right: 2px;
+    color: rgb(255, 127, 127);
+}
