--- a/src/components/console/style.css
+++ b/src/components/console/style.css
@@ -9,32 +9,31 @@
 
 #console{
     background: #1e1e2e;
-    margin: 0px 16px ;
+    margin: 0px 10px ;
     display: flex;
     flex-flow: row wrap;
     padding-bottom: 20px;
 }
 
 .typewriter{
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid orange; /* The typwriter cursor */
+    overflow: hidden; 
+    font-size: 100% ;
+    border-right: .15em solid rgb(255, 107, 107);
     white-space: nowrap;
-    margin: auto 0; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em; /* Adjust as needed */
+    margin: auto 0;
+    letter-spacing: .12em; 
     color:white;
     animation: 
-        typing 3.5s steps(40, end),
-        blink-caret .75s step-end infinite;
+        typing 3s steps(40, end),
+        blink-caret 1s step-end infinite;
 }
 
-/* The typing effect */
 @keyframes typing {
   from { width: 0 }
   to { width: 100% }
 }
 
-/* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to { border-color: transparent }
-  50% { border-color: orange; }
+  50% { border-color: rgb(255, 107, 107); }
 }
