--- a/src/components/game/style.css
+++ b/src/components/game/style.css
@@ -1,3 +1,45 @@
+#start-game{
+    position: relative;
+    border: 3px solid pink;
+    border-radius: 4px;
+    height: 384px;
+    width: 384px;
+    background-color: white;
+    display: inline-flex;
+    flex-flow: row wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+#start-header{
+    width: 300px;
+    text-align: center;
+    padding-bottom: 34px;
+}
+
+input[type=text]{
+    font-family: inherit;
+    color: rgb(255, 127, 127);
+    width: 150px;
+    letter-spacing: .13em; 
+    background: none;
+    border-radius: 4pt;
+    border: rgba(255, 127, 127, 0.342) solid 2px; 
+    line-height: 22px;  
+    box-shadow: inset 0 0 0.8em rgba(255,255,255,0.3), 0 0 0.8em rgba(255,255,255,0.3);
+    transition: 180ms box-shadow ease-in-out;  
+}
+
+input[type=text]:focus {
+    outline: 3px solid transparent;
+    border-color: hsl(var(--input-focus-h), var(--input-focus-s), var(--input-focus-l));
+    box-shadow: 0 0 0 3px hsla(var(--input-focus-h), var(--input-focus-s), calc(var(--input-focus-l) +40%), 0.8);
+    background:#fafbfa;
+    color:rgb(255, 127, 127);
+}
+
+
 .pause-btn{
     color:rgb(255, 127, 127);
     background-color: white;
