add computer component

--- a/src/components/viewport/style.css
+++ b/src/components/viewport/style.css
@@ -3,7 +3,7 @@
     overflow: hidden;
     border: 3px solid pink;
     border-radius: 4px;
-    background-color: rgba(0, 0, 0, 0.705);
+    background-color: #1e1e2e;
 }
 
 .sleep{
